cm4all-beng-proxy (0.5.15) unstable; urgency=low

  * inline-widget: check the widget HTTP response status

 --

cm4all-beng-proxy (0.5.14) unstable; urgency=low

  * ajp-client: implemented request body
  * cookie-client: obey "max-age=0" properly
  * processor: forward the original HTTP status
  * response, widget-http: don't allow processing resource without body
  * widget-http: check the Content-Type before invoking processor
  * response: pass the "Location" response header
  * debian: added a separate -optimized-dbg package
  * added init script support for multiple ports (--port) and multiple listen
    (--listen) command line argumnents
  * translation: added the "APPEND" packet for command line arguments
  * pipe: support command line arguments

 -- Max Kellermann <mk@cm4all.com>  Mon, 29 Jun 2009 16:51:16 +0200

cm4all-beng-proxy (0.5.13) unstable; urgency=low

  * widget-registry: clear local_address in translate request
  * cmdline: added the "--listen" option

 -- Max Kellermann <mk@cm4all.com>  Wed, 24 Jun 2009 12:27:17 +0200

cm4all-beng-proxy (0.5.12) unstable; urgency=low

  * response: pass the "Location" response handler
  * added support for multiple listener ports

 -- Max Kellermann <mk@cm4all.com>  Tue, 23 Jun 2009 23:34:55 +0200

cm4all-beng-proxy (0.5.11) unstable; urgency=low

  * build with autotools
  * use libcm4all-socket, GLib
  * Makefile.am: support out-of-tree builds
  * added optimized Debian package
  * tcache: fixed wrong assignment in VARY=HOST
  * translation: added request packet LOCAL_ADDRESS

 -- Max Kellermann <mk@cm4all.com>  Tue, 23 Jun 2009 15:42:12 +0200

cm4all-beng-proxy (0.5.10) unstable; urgency=low

  * widget-http: assign the "address" variable

 -- Max Kellermann <mk@cm4all.com>  Mon, 15 Jun 2009 18:38:58 +0200

cm4all-beng-proxy (0.5.9) unstable; urgency=low

  * tcache: fixed typo in tcache_string_match()
  * tcache: support VARY=SESSION
  * translate: added the INVALIDATE response packet