@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.5.15) unstable; urgency=low
 
   * inline-widget: check the widget HTTP response status
+  * response: don't apply transformation on failed response
 
  --
 
